SalesforceGarage/src/objects/QBO_OAuthService__c.object
<CustomObject>
    <fields>
        <fullName>QBO_Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Application_Token__c</fullName>
        <label>Application Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QBO AuthService</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QBOAuthService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QBO OAuthService</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>